fix: word break on card

--- a/src/components/card/card.styles.css
+++ b/src/components/card/card.styles.css
@@ -6,4 +6,5 @@
     margin: 2% 0;
     border-radius: 5px;
     padding: 10px;
+    word-break: break-all;
 }
